refactor: 전체 백엔드 체크스타일 에러 제거